# strace-redox

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: f80.rs  lib.rs  main.rs
src/arch/: x86_64.rs
src/bin_modes/: advanced.rs  mod.rs  simple.rs
src/kernel/: debug.rs
