[package]
name = "strace"
version = "0.1.0"
authors = ["jD91mZM2 <me@krake.one>"]
edition = "2018"

[dependencies]
bitflags = "1.1.0"

redox_syscall = { git = "https://gitlab.redox-os.org/jD91mZM2/syscall.git", branch = "ptrace" }
# redox_syscall = { git = "https://gitlab.redox-os.org/redox-os/syscall.git" }
# redox_syscall = { path = "/home/user/redox-nix/redox/kernel/syscall" }
