[package]
name = "strace"
version = "0.1.0"
authors = ["jD91mZM2 <me@krake.one>"]
edition = "2018"

[dependencies]
bitflags = "1.1.0"
structopt = { version = "0.2.18", optional = true }
redox_syscall = { git = "https://gitlab.redox-os.org/redox-os/syscall.git" }

[features]
default = [ "advanced" ]
advanced = [ "structopt" ]
